; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_kpi_interfacefilter.c_iflt_attach.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_kpi_interfacefilter.c_iflt_attach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iff_filter = type { i32 }

@ENOENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @iflt_attach(i32* %0, %struct.iff_filter* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca %struct.iff_filter*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store %struct.iff_filter* %1, %struct.iff_filter** %6, align 8
  store i32* %2, i32** %7, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %12

10:                                               ; preds = %3
  %11 = load i32, i32* @ENOENT, align 4
  store i32 %11, i32* %4, align 4
  br label %17

12:                                               ; preds = %3
  %13 = load i32*, i32** %5, align 8
  %14 = load %struct.iff_filter*, %struct.iff_filter** %6, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = call i32 @dlil_attach_filter(i32* %13, %struct.iff_filter* %14, i32* %15, i32 0)
  store i32 %16, i32* %4, align 4
  br label %17

17:                                               ; preds = %12, %10
  %18 = load i32, i32* %4, align 4
  ret i32 %18
}

declare dso_local i32 @dlil_attach_filter(i32*, %struct.iff_filter*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
